--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact Us</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
           </ul>
         </div>
       </nav>
@@ -68,89 +65,141 @@
       </div>
     </section>
     <section class="about-us" id="about">
-      <div class="section-heading container2">
+      <div class="section-heading container">
         About Us
         <div class="underline"></div>
       </div>
-      <div class="descrip container">
-        <img
-          src="./statics/images/scott-graham-OQMZwNd3ThU-unsplash.jpg"
-          alt="About Us"
-        />
+      <div class="container">
         <ul class="about-list">
-          <li>
-            A team of all kinds of corporate advisory professionals in India
-            viz. Company Secretaries, Chartered Accountants, Advocates etc
+          <li class="col-lg-3 col-md-12">
+            <img
+              src="./statics/images/iconmonstr-idea-14-240.png"
+              alt=""
+              class="img-list"
+            />
+            <p>
+              A team of all kinds of corporate advisory professionals in India
+              viz. Company Secretaries, Chartered Accountants, Advocates etc.
+            </p>
           </li>
-          <li>
-            A rich experience of more than Ten years & the professional
-            expertise in dealing with all kinds of Corporate, Secretarial,
-            Foreign Exchange Laws (FEMA, FCRA & R.B.I. Regulations / Approvals),
-            Corporate Advisory etc.
+          <li class="col-lg-3 col-md-12">
+            <img
+              src="./statics/images/iconmonstr-school-17-240.png"
+              alt=""
+              class="img-list"
+            />
+            <p>
+              A rich experience of more than Ten years & the professional
+              expertise in dealing with all kinds of Corporate, Secretarial,
+              Foreign Exchange Laws (FEMA, FCRA & R.B.I. Regulations /
+              Approvals), Corporate Advisory etc.
+            </p>
           </li>
-          <li>
-            We strive to provide the services to the best of the satisfaction of
-            our clients at suitable terms.
+          <li class="col-lg-3 col-md-12">
+            <img
+              src="./statics/images/iconmonstr-help-3-240.png"
+              alt=""
+              class="img-list"
+            />
+            <p>
+              We strive to provide the services to the best of the satisfaction
+              of our clients at suitable terms.
+            </p>
           </li>
         </ul>
       </div>
     </section>
-    <section class="area-of-expert container2" id="expertise">
+    <section class="area-of-expert container" id="expertise">
       <div class="section-heading">
         Area of Expertise
       </div>
       <div class="descrip">
-        <ul class="area-of-expert-list">
+        <ul class="area-of-expert-list col-lg-6 col-md-12 col-sm-12">
           <li>
             <img
-              src="https://img.icons8.com/doodle/28/000000/checkmark.png"
-            />Corporate
+              src="./statics/images/iconmonstr-checkbox-20-240.png"
+              alt=""
+              class="img-tick"
+            />
+            <p>Corporate</p>
           </li>
           <li>
-            <img src="https://img.icons8.com/doodle/28/000000/checkmark.png" />
-            Foreign Exchange Laws (FEMA, FCRA & R.B.I. Regulations / Approvals),
+            <img
+              src="./statics/images/iconmonstr-checkbox-20-240.png"
+              alt=""
+              class="img-tick"
+            />
+            <p>
+              Foreign Exchange Laws (FEMA, FCRA & R.B.I. Regulations /
+              Approvals),
+            </p>
           </li>
           <li>
-            <img src="https://img.icons8.com/doodle/28/000000/checkmark.png" />
-            Corporate Advisory (Incorporation of all types of body corporates
-            including Companies, LLPs, Partnership, Proprietorship, Trusts,
-            Societies, Infusing Foreign Equity, Government Approvals etc.),
+            <img
+              src="./statics/images/iconmonstr-checkbox-20-240.png"
+              alt=""
+              class="img-tick"
+            />
+            <p>
+              Corporate Advisory (Incorporation of all types of body corporates
+              including Companies, LLPs, Partnership, Proprietorship, Trusts,
+              Societies, Infusing Foreign Equity, Government Approvals etc.),
+            </p>
           </li>
         </ul>
-        <ul class="area-of-expert-list">
+        <ul class="area-of-expert-list col-lg-6 col-md-12 col-sm-12">
           <li>
             <img
-              src="https://img.icons8.com/doodle/28/000000/checkmark.png"
-            />Secretarial
+              src="./statics/images/iconmonstr-checkbox-20-240.png"
+              alt=""
+              class="img-tick"
+            />
+            <p>Secretarial</p>
           </li>
           <li>
             <img
-              src="https://img.icons8.com/doodle/28/000000/checkmark.png"
-            />Regulatory Issues
+              src="./statics/images/iconmonstr-checkbox-20-240.png"
+              alt=""
+              class="img-tick"
+            />
+            <p>
+              Regulatory Issues
+            </p>
           </li>
           <li>
-            <img src="https://img.icons8.com/doodle/28/000000/checkmark.png" />
-            Accounts, Financial works and such other allied corporate and legal
-            matters.
+            <img
+              src="./statics/images/iconmonstr-checkbox-20-240.png"
+              alt=""
+              class="img-tick"
+            />
+            <p>
+              Accounts, Financial works and such other allied corporate and
+              legal matters.
+            </p>
           </li>
         </ul>
       </div>
     </section>
 
-    <section class="area-of-expert container2" id="services">
+    <section class="area-of-expert container" id="services">
       <div class="section-heading">
         Our Services
       </div>
       <div class="descrip">
-        <ul class="area-of-expert-list">
+        <ul class="area-of-expert-list col-lg-6 col-md-12 col-sm-12">
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
-            />Legal Drafting and Vetting.
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
+            />
+            Legal Drafting and Vetting.
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />
             Secretarial Matters: Maintenance/Review of Minutes Books, Statutory
             Registers and all other secretarial records, filing of relevant
@@ -159,66 +208,89 @@
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />Secretarial Audit
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />
             Incorporation of all kinds of Companies, LLPs, Partnerships,
             Proprietorship, Trusts, Societies.
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />
             Conversion of Status of Companies and formalities involved thereof.
           </li>
 
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />Trademark, Patents and Copyrights related works
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />
             Shifting of Registered Office from one state to another and
             formalities involved thereof.
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />Loan Syndication and Project Report Documentation.
           </li>
         </ul>
-        <ul class="area-of-expert-list">
+        <ul class="area-of-expert-list col-lg-6 col-md-12 col-sm-12">
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />Filing of Balance Sheet in XBRL Mode
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />FCRA Registration and compliances under FEMA and FCRA.
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />MSME/TAN/PAN/GST/IEC Registration
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
-            />Filing of ITRs/ GST Returns/TDS Returns
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
+            />
+            Filing of ITRs/ GST Returns/TDS Returns
           </li>
 
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />
             Obtaining clearance and approvals from Statutory Authorities and
             liasioning with Ministry of Corporate Affairs, Regional Directors,
@@ -226,51 +298,59 @@
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />Dematerialisation of Shares with NSDL and CDSL.
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />Digital Signature Certificate of Class-2 and Class-3
           </li>
           <li>
             <img
-              src="https://img.icons8.com/cotton/30/000000/sport-badge--v2.png"
+              src="./statics/images/iconmonstr-award-23-240.png"
+              alt="#"
+              class="img-achv"
             />Other Secretarial and Legal Services
           </li>
         </ul>
       </div>
     </section>
-    <footer class="main-footer">
-      <div class="other-links container2">
-        <div class="heading">Other Links</div>
-        <ul class="link-list">
-          <li><a href="htpps://www.mca.gov.in">www.mca.gov.in</a></li>
-          <li>
-            <a href="htpps://www.incometaxindiaefiling.gov.in"
-              >www.incometaxindiaefiling.gov.in</a
-            >
-          </li>
-          <li><a href="htpps://www.rbi.org.in">www.rbi.org.in</a></li>
-          <li><a href="htpps://www.gst.gov.in">www.gst.gov.in</a></li>
-          <li><a href="htpps://www.nclt.gov.in">www.nclt.gov.in</a></li>
-          <li><a href="htpps://www.icsi.edu">www.icsi.edu</a></li>
-        </ul>
-      </div>
-      <div class="contact-us container2" id="contact">
-        <div class="heading">Contact Us</div>
-        <ul class="link-list">
-          <li>Contact Person: Prerna Mittal</li>
-          <li>
-            E-Mail:
-            <a href="mailto:csprerna.mittal@gmail.com"
-              >csprerna.mittal@gmail.com</a
-            >
-          </li>
-          <li>Phone Number: +91-99104 60779</li>
-          <li>Address: Keshavpuram, Pitampura and Rohini</li>
-        </ul>
+    <footer class="footer-color">
+      <div class="container main-footer">
+        <div class="other-links">
+          <div class="heading">Other Links</div>
+          <ul class="link-list">
+            <li><a href="htpps://www.mca.gov.in">www.mca.gov.in</a></li>
+            <li>
+              <a href="htpps://www.incometaxindiaefiling.gov.in"
+                >www.incometaxindiaefiling.gov.in</a
+              >
+            </li>
+            <li><a href="htpps://www.rbi.org.in">www.rbi.org.in</a></li>
+            <li><a href="htpps://www.gst.gov.in">www.gst.gov.in</a></li>
+            <li><a href="htpps://www.nclt.gov.in">www.nclt.gov.in</a></li>
+            <li><a href="htpps://www.icsi.edu">www.icsi.edu</a></li>
+          </ul>
+        </div>
+        <div class="contact-us" id="contact">
+          <div class="heading">Contact Us</div>
+          <ul class="link-list">
+            <li>Contact Person: Prerna Mittal</li>
+            <li>
+              E-Mail:
+              <a href="mailto:csprerna.mittal@gmail.com"
+                >csprerna.mittal@gmail.com</a
+              >
+            </li>
+            <li>Phone Number: +91-99104 60779</li>
+            <li>Address: Keshavpuram, Pitampura and Rohini</li>
+          </ul>
+        </div>
       </div>
     </footer>
     <script
